--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -10,8 +10,7 @@
         <li><a href="/dashboard">Welcome {{user.firstName}}</a></li>
         <li><a href="/auth/logout"><i class="fa fa-sign-out green-text"></i> Logout</a></li>
         {{else}}
-        <li><a href="/adventures"><i class="fa fa-book green-text"></i>
-            Public Adventures</a></li>
+        <li><a href="/adventures"><i class="fa fa-book green-text"></i> Public Adventures</a></li>
         {{/if}}
       </ul>
       {{!-- SIDE MENU --}}
