--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -1,44 +1,42 @@
 <nav class="blue-grey  darken-4">
-  <div class="container">
-    <div class="nav-wrapper">
-      <a href="/adventures" class="brand-logo center green-text">AdventureMemos</a>
-      <a href="#" data-activates="main-menu" class="button-collapse show-on-large green-text"><i
-          class="fas fa-bars fa-2x"></i></a>
-      {{!-- RIGHT NAV --}}
-      <ul class="right hide-on-med-and-down">
-        {{#if user}}
-        <li><a href="/dashboard">Welcome {{user.firstName}}</a></li>
-        <li><a href="/auth/logout"><i class="fas fa-sign-out-alt green-text"></i> Logout</a></li>
-        {{else}}
-        <li><a href="/adventures"><i class="fas fa-book-open green-text"></i> Public Adventures</a></li>
-        {{/if}}
-      </ul>
-      {{!-- SIDE MENU --}}
-      <ul class="side-nav" id="main-menu">
-        {{#if user}}
-        {{else}}
-        <li>
-          <a href="/auth/google" class="btn teal lighten-1"><i class="fab fa-google left white-text"></i> Login with
-            Google</a>
-        </li>
-        <li class="divider"></li>
-        {{/if}}
-        <li>
-          <a href="/adventures"><i class="fas fa-book-open green-text"></i> Public Adventures</a>
-        </li>
-        <li class="divider"></li>
-        {{#if user}}
-        <li>
-          <a href="/dashboard"><i class="fas fa-cog green-text"></i> Dashboard</a>
-        </li>
-        <li>
-          <a href="/adventures/my"><i class="fas fa-user-astronaut green-text"></i> My Stories</a>
-        </li>
-        <li>
-          <a href="/auth/logout"><i class="fas fa-sign-out-alt green-text"></i> Logout</a>
-        </li>
-        {{/if}}
-      </ul>
-    </div>
+  <div class="nav-wrapper">
+    <a href="/" class="brand-logo center green-text">AdventureMemos</a>
+    <a href="#" data-activates="main-menu" class="button-collapse show-on-large green-text"><i
+        class="fas fa-bars fa-2x"></i></a>
+    {{!-- RIGHT NAV --}}
+    <ul class="right hide-on-med-and-down">
+      {{#if user}}
+      <li><a href="/dashboard">Welcome {{user.firstName}}</a></li>
+      <li><a href="/auth/logout"><i class="fas fa-sign-out-alt green-text"></i> Logout</a></li>
+      {{else}}
+      <li><a href="/adventures"><i class="fas fa-book-open green-text"></i> Public Adventures</a></li>
+      {{/if}}
+    </ul>
+    {{!-- SIDE MENU --}}
+    <ul class="side-nav" id="main-menu">
+      {{#if user}}
+      {{else}}
+      <li>
+        <a href="/auth/google" class="btn teal lighten-1"><i class="fab fa-google left white-text"></i> Login with
+          Google</a>
+      </li>
+      <li class="divider"></li>
+      {{/if}}
+      <li>
+        <a href="/adventures"><i class="fas fa-book-open green-text"></i> Public Adventures</a>
+      </li>
+      <li class="divider"></li>
+      {{#if user}}
+      <li>
+        <a href="/dashboard"><i class="fas fa-cog green-text"></i> Dashboard</a>
+      </li>
+      <li>
+        <a href="/adventures/my"><i class="fas fa-user-astronaut green-text"></i> My Stories</a>
+      </li>
+      <li>
+        <a href="/auth/logout"><i class="fas fa-sign-out-alt green-text"></i> Logout</a>
+      </li>
+      {{/if}}
+    </ul>
   </div>
 </nav>
