--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,3 +11,15 @@ main {
 footer {
   margin-top: 20px;
 }
+
+.adventure-text {
+  height: 50px;
+}
+
+.dash-status {
+  text-transform: capitalize;
+}
+
+#delete-form {
+  display: inline;
+}
