--- a/views/adventures/index.handlebars
+++ b/views/adventures/index.handlebars
@@ -14,7 +14,7 @@
         <br>
         <div class="chip">
           <img src="{{user.image}}" alt="Google User Img">
-          {{user.firstName}} {{user.lastName}}
+          <a href="/adventures/user/{{user.id}}">{{user.firstName}} {{user.lastName}}</a>
         </div>
       </div>
       <div class="card-action center-align">
