--- a/views/index/dashboard.handlebars
+++ b/views/index/dashboard.handlebars
@@ -13,7 +13,7 @@
   <tbody>
     {{#each adventures}}
     <tr>
-      <td><a href="/adventure/show/{{id}}">{{title}}</a></td>
+      <td>{{title}}</td>
       <td>{{formatDate date 'MMMM Do YYYY'}}</td>
       <td><span class="dash-status">{{status}}</span></td>
       <td>
