text input corrected

--- a/views/adventures/show.handlebars
+++ b/views/adventures/show.handlebars
@@ -14,7 +14,7 @@
     {{#each adventure.comments}}
     <div class="card">
       <div class="card-content">
-        <textarea>{{commentBody}}</textarea>>
+        <h5>{{commentBody}}</h5>
         <div class="chip">
           <img src="{{commentUser.image}}" alt="Google User Img">
           <a href="/adventures/user/{{commentUser.id}}">{{commentUser.firstName}} {{commentUser.lastName}}</a>
